# ACES

./: .clang-tidy  .gitignore  404.html  AGENTS.md  CMakeLists.txt  PET0.ESMF_LogFile  aces_config.yaml.example  aces_emissions.streams  cdeps_in.nml  cppcheck_out.txt  index.html  new_scheme_config.yaml.example  pyproject.toml  search.json  setup.sh  zensical.toml
.github/workflows/: ci.yml  lint.yml
cmake/: FindESMF.cmake  FindPIO.cmake
concepts/: index.html
configuration/: index.html
docs/: index.md  migration_examples.md  users-guide.md
examples/: aces_config_ex1.yaml  aces_config_ex2.yaml  aces_config_ex3.yaml  aces_config_ex4.yaml  aces_config_ex5.yaml  aces_config_ex6.yaml  index.html
include/aces/: aces.hpp  aces_compute.hpp  aces_config.hpp  aces_data_ingestor.hpp  aces_diagnostics.hpp  aces_state.hpp  (+4 more)
migration_examples/: index.html
scripts/: download_hemco_data.py  generate_physics_scheme.py  hemco_to_aces.py  index.html  setup_hemco_examples.sh  verify_hemco_data.py  visualize_stack.py
src/: aces_cap.cpp  aces_compute.cpp  aces_config_parser.cpp  aces_physics_factory.cpp  aces_stacking_engine.cpp  mock_esmf.cpp
standalone_nuopc/: CMakeLists.txt  aces_config.yaml  main.cpp
tests/: example_driver.cpp  hemco_mimic_driver.cpp  test_aces_cap.cpp  test_aces_compute.cpp  test_aces_ingestor.cpp  test_aces_physics.cpp  test_aces_utils.cpp  test_cdeps_read.cpp  test_converters.py  test_diagnostics.cpp  test_hemco_mimic.cpp  test_physics.cpp  test_scripts.py  test_stacking_engine.cpp  test_visualize.py
tutorial/: index.html
users-guide/: index.html
(+55 files in other folders)
